src/test/ui/const-generics/issues/issue-61336.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/issue-61336.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0277]: the trait bound `T: std::marker::Copy` is not satisfied
  --> $DIR/issue-61336.rs:9:5
   |
LL |     [x; N]
   |     ^^^^^^ the trait `std::marker::Copy` is not implemented for `T`
   |
   = note: the `Copy` trait is required because the repeated element will be copied
help: consider restricting type parameter `T`
   |
LL | fn g<T: std::marker::Copy, const N: usize>(x: T) -> [T; N] {
   |       ^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
